--- a/requirements.txt
+++ b/requirements.txt
@@ -13,9 +13,11 @@ mpmath==1.3.0
 networkx==3.2.1
 numpy==2.0.2
 packaging==24.2
+pandas==2.2.3
 pillow==11.1.0
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
+pytz==2024.2
 scikit-learn==1.6.1
 scipy==1.13.1
 six==1.17.0
@@ -23,4 +25,5 @@ sympy==1.13.1
 threadpoolctl==3.5.0
 torch==2.5.1
 typing_extensions==4.12.2
+tzdata==2025.1
 zipp==3.21.0
