--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ importlib_resources==6.5.2
 Jinja2==3.1.5
 joblib==1.4.2
 kiwisolver==1.4.7
+lightgbm==4.6.0
 MarkupSafe==3.0.2
 matplotlib==3.9.4
 mpmath==1.3.0
